# Autonomous-driving-ML-ROS2-GAZEBO

./: .dockerignore  .gitignore  CONTEXT.txt  Dockerfile  PROJECT_EXPLAINED.md  QUICK_START.md  README.md  TRAINING_COMMANDS.md  WORKSPACE_README.md  build.sh  check_gpu.sh  config.py  configure_cloud_assets.sh  context.jsonl  create_packages.sh  debug_hierarchy.txt  detailed_log.txt  docker-compose.yml  drive_simple_robot.py  four_wheel_robot.sdf  goal_seeking_env.py  hierarchy.txt  improved_goal_env.py  inspect_hierarchy.py  inspect_usd.py  install_nvidia_toolkit.sh  isaac_leatherback_env.py  kill_gazebo.sh  launch_four_wheel.sh  launch_headless.sh  launch_with_gui.sh  project_explanation.md  pyproject.toml  requirements.txt  run.sh  setup_isaac_env.sh  simple_drive.py  simple_robot.sdf  stop.sh  test_agent.py  (+7 more)
_archive/: debug_api.py  obstacles.xml  raceway_goal_env.py  test_lidar.py  train.py  vision_goal_env.py
_archive/isaac_worlds/: test_assets.py  test_installation.py  warehouse_world.py
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/vehicle_control/share/vehicle_control/: package.dsv  package.ps1  package.sh
install/vehicle_description/share/vehicle_description/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/vehicle_description/share/vehicle_description/urdf/: simple_car.urdf  simple_car_with_sensors.sdf
isaac_lab/: __init__.py
isaac_lab/envs/: __init__.py  differential_drive_env.py  differential_drive_env_cfg.py  leatherback_env.py  leatherback_env_cfg.py
jetson/: motor_control_node.py  test_motors.py
leatherback_tensorboard/PPO_1/: events.out.tfevents.1765228392.jayoungh-pc.143628.0  events.out.tfevents.1765235524.jayoungh-pc.157418.0
leatherback_tensorboard/PPO_2/: events.out.tfevents.1765228748.jayoungh-pc.145311.0  events.out.tfevents.1765235554.jayoungh-pc.157832.0
leatherback_tensorboard/PPO_3/: events.out.tfevents.1765235694.jayoungh-pc.158757.0
leatherback_tensorboard/PPO_4/: events.out.tfevents.1765236196.jayoungh-pc.164662.0
leatherback_tensorboard/PPO_5/: events.out.tfevents.1765239999.jayoungh-pc.173004.0
leatherback_tensorboard/PPO_6/: events.out.tfevents.1765240783.jayoungh-pc.176175.0
leatherback_tensorboard/PPO_7/: events.out.tfevents.1765240956.jayoungh-pc.176599.0
leatherback_tensorboard/PPO_8/: events.out.tfevents.1765244650.jayoungh-pc.179964.0
leatherback_tensorboard/PPO_9/: events.out.tfevents.1765245193.jayoungh-pc.181169.0
log/: latest_build
models/ppo/ppo_20251224_163049/: config.yaml
models/ppo/ppo_20251224_165530/: config.yaml
models/ppo/ppo_20251225_090950/: config.yaml
models/ppo_barn_v3/diff_20251228_164456/: config.yaml
models/ppo_camera/ppo_20251225_085518/: config.yaml
models/ppo_multimodal/diff_20251229_131637/: config.yaml
models/ppo_multimodal/diff_20251229_151632/: config.yaml
ros2_ws/src/autonomous_nav/: package.xml
ros2_ws/src/autonomous_nav/autonomous_nav/: lane_follower.py
ros2_ws/src/isaac_ros_bridge/: package.xml  setup.cfg  setup.py
ros2_ws/src/isaac_ros_bridge/isaac_ros_bridge/: __init__.py  isaac_publisher.py  ros_subscriber.py
ros2_ws/src/ml_perception/: package.xml
ros2_ws/src/ml_perception/ml_perception/: dataset_preprocessor.py  lane_detector.py  yolo_detector.py
ros2_ws/src/rl_training/: package.xml  setup.py
ros2_ws/src/vehicle_control/: package.xml
ros2_ws/src/vehicle_control/vehicle_control/: pid_controller.py  teleop_keyboard.py
scripts/: download_comma2k19.sh  download_udacity.sh  setup_isaac_env.sh  verify_installation.py
src/autonomous_nav/: package.xml  setup.py
src/data_collection/: package.xml  setup.py
src/ml_perception/: package.xml  setup.py
src/ml_perception/ml_perception/: waymo_parser.py
src/rl_training/: package.xml  setup.cfg
src/rl_training/rl_training/: gazebo_env.py  rl_agent.py  train_ppo.py
src/vehicle_control/: package.xml  setup.py
src/vehicle_control/vehicle_control/: teleop_keyboard_ackermann.py
src/vehicle_description/: CMakeLists.txt  package.xml
src/vehicle_description/urdf/: ackermann_car.sdf  ackermann_rl_car.sdf  rl_training_car.sdf  smart_car.sdf
src/vehicle_gazebo/: CMakeLists.txt  package.xml
src/vehicle_gazebo/launch/: rl_test.launch.py  spawn_curved_track.launch.py  spawn_vehicle.launch.py
src/vehicle_gazebo/worlds/: ackermann_rl_world.sdf  curved_track.sdf  highway_track.sdf  manual_test_world.sdf  oval_track.sdf  rl_test_world.sdf  rl_training_world.sdf  test_track.sdf
training/: __init__.py  evaluate.py  preview_barn.py  shadow_robot.py  train_differential.py  train_ppo.py  view_agent.py  view_differential.py
training/configs/: env_config.yaml  ppo_barn_config.yaml  ppo_barn_v3_config.yaml  ppo_camera_config.yaml  ppo_config.yaml  ppo_multimodal_config.yaml
